--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ Theme Name: My Classic Theme live
 }
 
 body {
-  border: 20px solid yellow;
+  border: 20px solid green;
 }
 header {
   background-image: url("images/header-wire.png");
